--- a/FrontEndWPF/DetallePersona.xaml
+++ b/FrontEndWPF/DetallePersona.xaml
@@ -5,11 +5,38 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:FrontEndWPF"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="DetallePersona">
+      d:DesignHeight="670" d:DesignWidth="800"
+      Title="DetallePersona" Unloaded="Page_Unloaded">
 
-    <Grid>
+    <StackPanel Height="640" Margin="15" Background="White">
+            
         
-        <DataGrid></DataGrid>
-    </Grid>
+        <Grid Background="White" Height="240" Margin="30">
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left">Nombre</Label>
+            <TextBox Grid.Row="1" Grid.Column="0" x:Name="txtNombre"></TextBox>
+            <Label Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left">Apellido paterno</Label>
+            <TextBox Grid.Row="3" Grid.Column="0" x:Name="txtApPaterno"></TextBox>
+            <Label Grid.Row="4" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left">Apellido materno</Label>
+            <TextBox Grid.Row="5" Grid.Column="0" x:Name="txtApMaterno"></TextBox>
+            <Label Grid.Row="6" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left">Clave identificación</Label>
+            <TextBox Grid.Row="7" Grid.Column="0" x:Name="txtClaveIde"></TextBox>
+            <DataGrid x:Name="grFactPersona" Grid.Row="8" Grid.Column="0" Margin="0,0,0,-193"></DataGrid>
+        </Grid>
+    </StackPanel>
 </Page>
