--- a/FrontEndWPF/PersonasView.xaml
+++ b/FrontEndWPF/PersonasView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="FrontEndWPF.Personas"
+﻿<Page x:Class="FrontEndWPF.PersonasView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,13 +6,14 @@
       xmlns:local="clr-namespace:FrontEndWPF"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Personas">
+      Title="Persona seleccionada">
 
     <Grid Background="White">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="93*" />
             <ColumnDefinition Width="138*" />
-            <ColumnDefinition Width="569*" />
+            <ColumnDefinition Width="110" />
+            <ColumnDefinition Width="469"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="5*" />
@@ -22,6 +23,7 @@
         <Label Grid.Column="0" Grid.Row="0" Margin="5" FontSize="11" VerticalAlignment="Center" HorizontalAlignment="Center">Identificación</Label>
         <TextBox TextWrapping="Wrap" Text=""  Grid.Column="1" Grid.Row="0" Margin="7"/>
         <Button x:Name="BtnConsultar" Content="Consultar" Grid.Column="2" Grid.Row="0" Width="100" Height="20" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-        <DataGrid x:Name="dataGrid1" Margin="10,10,10,10" IsReadOnly="True" Grid.ColumnSpan="3" Grid.Row="1"/>
+        <Button x:Name="BtnNuevo" Content="Nuevo" Grid.Column="3" Grid.Row="0" Width="100" Height="20" VerticalAlignment="Center" HorizontalAlignment="Left" Click="BtnNuevo_Click"/>
+        <DataGrid x:Name="dataGrid1" Margin="10,10,10,10" IsReadOnly="True" Grid.ColumnSpan="4" Grid.Row="1"/>
     </Grid>
 </Page>
