--- a/FrontEndWPF/DetallePersonaView.xaml
+++ b/FrontEndWPF/DetallePersonaView.xaml
@@ -15,34 +15,36 @@
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
+                <ColumnDefinition/>
                 <ColumnDefinition Width="210"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition />
+                <RowDefinition Height="23"/>
                 <RowDefinition />
+                <RowDefinition Height="25"/>
                 <RowDefinition />
+                <RowDefinition Height="25"/>
                 <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
+                <RowDefinition Height="25"/>
                 <RowDefinition />
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
-            <Button Grid.Row="0" Grid.Column="0" x:Name="btnUpdatePersona" Width="200" HorizontalAlignment="Right" VerticalAlignment="Center">Guardar</Button>
-            <Button Grid.Row="0" Grid.Column="1" x:Name="btnEliminarPersona" Width="200" HorizontalAlignment="Right" Background="Red" Foreground="White" VerticalAlignment="Center">Eliminar</Button>
-            <Label Grid.ColumnSpan="2" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left">Nombre</Label>
-            <TextBox Grid.ColumnSpan="2" Grid.Row="2" Grid.Column="0" x:Name="txtNombre"></TextBox>
-            <Label Grid.ColumnSpan="2" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left">Apellido paterno</Label>
-            <TextBox Grid.ColumnSpan="2" Grid.Row="4" Grid.Column="0" x:Name="txtApPaterno"></TextBox>
-            <Label Grid.ColumnSpan="2" Grid.Row="5" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left">Apellido materno</Label>
-            <TextBox Grid.ColumnSpan="2" Grid.Row="6" Grid.Column="0" x:Name="txtApMaterno"></TextBox>
-            <Label Grid.ColumnSpan="2" Grid.Row="7" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left">Clave identificación</Label>
-            <TextBox Grid.ColumnSpan="2" Grid.Row="8" Grid.Column="0" x:Name="txtClaveIde" IsReadOnly="True"></TextBox>
-            <Button Grid.ColumnSpan="2" Grid.Row="9" Grid.Column="0" x:Name="btnAddFact" Width="200" HorizontalAlignment="Right">Agregar factura</Button>
-            <DataGrid Grid.ColumnSpan="2" x:Name="grFactPersona" Grid.Row="10" Grid.Column="0" Margin="0,0,0,-193"></DataGrid>
+            <Button Grid.Row="0" Grid.Column="0" x:Name="btnRegresarPrincipal" Width="130" HorizontalAlignment="Left" VerticalAlignment="Center" Click="btnRegresarPrincipal_Click">Regresar</Button>
+            <Button Grid.Row="0" Grid.Column="1" x:Name="btnUpdatePersona" Width="200" HorizontalAlignment="Right" VerticalAlignment="Center">Guardar</Button>
+            <Button Grid.Row="0" Grid.Column="3" x:Name="btnEliminarPersona" Width="200" HorizontalAlignment="Right" Background="Red" Foreground="White" VerticalAlignment="Center">Eliminar</Button>
+            <Label Grid.ColumnSpan="3" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left">Nombre</Label>
+            <TextBox Grid.ColumnSpan="3" Grid.Row="2" Grid.Column="0" x:Name="txtNombre"></TextBox>
+            <Label Grid.ColumnSpan="3" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left">Apellido paterno</Label>
+            <TextBox Grid.ColumnSpan="3" Grid.Row="4" Grid.Column="0" x:Name="txtApPaterno"></TextBox>
+            <Label Grid.ColumnSpan="3" Grid.Row="5" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left">Apellido materno</Label>
+            <TextBox Grid.ColumnSpan="3" Grid.Row="6" Grid.Column="0" x:Name="txtApMaterno"></TextBox>
+            <Label Grid.ColumnSpan="3" Grid.Row="7" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left">Clave identificación</Label>
+            <TextBox Grid.ColumnSpan="3" Grid.Row="8" Grid.Column="0" x:Name="txtClaveIde" IsReadOnly="True"></TextBox>
+            <Button Grid.ColumnSpan="3" Grid.Row="9" Grid.Column="0" x:Name="btnAddFact" Width="200" HorizontalAlignment="Right" Click="btnAddFact_Click">Agregar factura</Button>
+            <DataGrid Grid.ColumnSpan="3" x:Name="grFactPersona" Grid.Row="10" Grid.Column="0" Margin="0,0,0,-193"></DataGrid>
         </Grid>
     </StackPanel>
 </Page>
