--- a/FrontEndWPF/PersonasView.xaml
+++ b/FrontEndWPF/PersonasView.xaml
@@ -10,20 +10,22 @@
 
     <Grid Background="White">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="93*" />
+            <ColumnDefinition Width="95*" />
             <ColumnDefinition Width="138*" />
             <ColumnDefinition Width="110" />
             <ColumnDefinition Width="469"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="5*" />
+            <RowDefinition Height="35" />
+            <RowDefinition Height="28" />
             <RowDefinition Height="57*"/>
         </Grid.RowDefinitions>
 
         <Label Grid.Column="0" Grid.Row="0" Margin="5" FontSize="11" VerticalAlignment="Center" HorizontalAlignment="Center">Identificación</Label>
-        <TextBox TextWrapping="Wrap" Text=""  Grid.Column="1" Grid.Row="0" Margin="7"/>
+        <TextBox TextWrapping="Wrap" Text=""  Grid.Column="1" Grid.Row="0" Margin="7" x:Name="txtIdentificacion"/>
         <Button x:Name="BtnConsultar" Content="Consultar" Grid.Column="2" Grid.Row="0" Width="100" Height="20" VerticalAlignment="Center" HorizontalAlignment="Left"/>
         <Button x:Name="BtnNuevo" Content="Nuevo" Grid.Column="3" Grid.Row="0" Width="100" Height="20" VerticalAlignment="Center" HorizontalAlignment="Left" Click="BtnNuevo_Click"/>
-        <DataGrid x:Name="dataGrid1" Margin="10,10,10,10" IsReadOnly="True" Grid.ColumnSpan="4" Grid.Row="1"/>
+        <Label Foreground="Red" Grid.ColumnSpan="4" Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Left">Para ver el detalle de la persona, de doble click sobre el registro</Label>
+        <DataGrid x:Name="dataGrid1" Margin="10,10,10,10" IsReadOnly="True" Grid.ColumnSpan="4" Grid.Row="2"/>
     </Grid>
 </Page>
